[package]
edition = "2018"
name = "bncsutil-node"
version = "0.1.0"
authors = ["Nikolay Kostyurin <jilizart@gmail.com>"]
license = "MIT"
exclude = ["artifacts.json", "index.node"]
build = "build.rs"

[lib]
crate-type = ["cdylib"]
name = "bncsutil_node"

[dependencies]
napi = "2.15.0"
napi-derive = "2.15.0"
libc = "0.2"
rug = "1.24.0"

[build-dependencies]
napi-build = "2.1.0"
cmake = "0.1"

[profile.release]
lto = true
