[package]
name = "bncsutil-node"
version = "0.1.0"
authors = ["Nikolay Kostyurin <jilizart@gmail.com>"]
license = "MIT"
exclude = ["artifacts.json", "index.node"]
build = "build.rs"

[lib]
name = "bncsutil_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"
cmake = "0.1"

[dependencies]
neon = "0.4.0"
libc = "0.2"
gmp = "0.3.1"
