[package]
name = "bncsutil-node"
version = "0.1.0"
authors = ["Nikolay Kostyurin <jilizart@gmail.com>"]
license = "MIT"
exclude = ["artifacts.json", "index.node"]
build = "build.rs"

[lib]
name = "bncsutil_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"
cmake = "0.1"

[dependencies]
neon = "0.10.1"
libc = "0.2"
# gmp-mpfr-sys = "1.6.2"
